--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todocrud",
   "version": "1.0.0",
-  "description": "Todo API built with Node.js, Express.js, JWT and Mongoose",
+  "description": "INET 1st instance backend",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,11 +10,9 @@
   "author": "profran",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.12",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0"
